// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDCTrack widget renders gene with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-1f0on15-MuiTypography-root"
        >
           
          cell adhesion molecu... - protein_coding
        </span>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ymsoo8-MuiSvgIcon-root-expandIcon"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-rqrb7m-MuiAccordionDetails-root-expansionPanelDetails"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Core details
              </p>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Position
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  3:196,596..409,417 
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Description
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    The protein encoded by this gene is a member of the L1 gene family of neural cell adhesion molecules. It is a neural recognition molecule that may be involved in signal transduction pathways. The deletion of one copy of this gene may be responsible for mental defects in patients with 3p- syndrome. This protein may also play a role in the growth of certain cancers. Alternate splicing results in both coding and non-coding variants. [provided by RefSeq, Nov 2011]
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Name
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    cell adhesion molecule L1-like
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Length
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    212,822
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Type
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    protein_coding
                  </span>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Attributes
              </p>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  biotype
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    protein_coding
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  geneChromosome
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    3
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  geneEnd
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    409417
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  geneStart
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    196596
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  geneStrand
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    1
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  id
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    R2VuZTpFTlNHMDAwMDAxMzQxMjEjZTQ2MDk1NGM4MmZiMjczYjIwNTk1MDliODFkZTZmYjEj
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 128px;"
                >
                  symbol
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    CHL1
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  synonyms
                </div>
                <div
                  class="css-16oc29p-fieldSubvalue"
                >
                  <div
                    class="css-1omt041-fieldValue"
                  >
                    <span>
                      CALL
                    </span>
                  </div>
                </div>
                <div
                  class="css-16oc29p-fieldSubvalue"
                >
                  <div
                    class="css-1omt041-fieldValue"
                  >
                    <span>
                      FLJ44930
                    </span>
                  </div>
                </div>
                <div
                  class="css-16oc29p-fieldSubvalue"
                >
                  <div
                    class="css-1omt041-fieldValue"
                  >
                    <span>
                      L1CAM2
                    </span>
                  </div>
                </div>
                <div
                  class="css-16oc29p-fieldSubvalue"
                >
                  <div
                    class="css-1omt041-fieldValue"
                  >
                    <span>
                      MGC132578
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="css-1lttu3w-container"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Show feature sequence
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="MuiFormControl-root css-147opmv-MuiFormControl-root-formControl"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
</div>
`;

exports[`GDCTrack widget renders mutation with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1elwnq4-MuiPaper-root-MuiAccordion-root"
  >
    <div
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
      >
        <span
          class="MuiTypography-root MuiTypography-button css-1f0on15-MuiTypography-root"
        >
           
          Simple Somatic Mutation
        </span>
      </div>
      <div
        class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ymsoo8-MuiSvgIcon-root-expandIcon"
          data-testid="ExpandMoreIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root css-rqrb7m-MuiAccordionDetails-root-expansionPanelDetails"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Core details
              </p>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Position
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  chr3:377,918 
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Length
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    1
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                >
                  Type
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    Simple Somatic Mutation
                  </span>
                </div>
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Attributes
              </p>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  chromosome
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    chr3
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  endPosition
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    377918
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  genomicDnaChange
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    chr3:g.377918G&gt;A
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  mutationSubtype
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    Single base substitution
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  mutationType
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    Simple Somatic Mutation
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  ncbiBuild
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    GRCh38
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  referenceAllele
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    G
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  score
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    3
                  </span>
                </div>
              </div>
              <div
                class="css-1m8nxnb-field"
              >
                <div
                  class="css-1q83rf3-fieldName"
                  style="width: 120px;"
                >
                  startPosition
                </div>
                <div
                  class="css-1omt041-fieldValue"
                >
                  <span>
                    377918
                  </span>
                </div>
              </div>
              <div
                class="css-1lttu3w-container"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Show feature sequence
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="MuiFormControl-root css-147opmv-MuiFormControl-root-formControl"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
  />
</div>
`;
